--- a/src/assets/css/knowledge.css
+++ b/src/assets/css/knowledge.css
@@ -43,8 +43,8 @@ body {
     text-align: center;
     font-size: 24px;
     color: #fff;
-    background: rgba(0, 0, 0, 0.4);
-    padding: 12px 0;
+    /* background: rgba(0, 0, 0, 0.4); */
+    padding: 12px 3px;
     font-weight: 600;
 }
 
@@ -113,6 +113,21 @@ body {
     align-items: center;
     padding: 100px;
     gap: 60px;
+}
+
+/* ====== 茶葉特色 / 台灣茶歷史 ==> 按鈕 ====== */
+.info-block button{
+    border-radius: 50%;
+    border: none;
+    padding: 10px 15px;
+    background-color: rgba(70, 85, 58, 0.2);
+    color: #fff;
+    font-weight: 1000;
+}
+
+.info-block button:hover{
+    background-color: rgba(70, 85, 58, 0.5);
+
 }
 
 .info-block img {
