--- a/src/assets/css/knowledge.css
+++ b/src/assets/css/knowledge.css
@@ -1,4 +1,3 @@
-
 /* === 全頁排版調整，避免左右滑動 === */
 html,
 body {
@@ -260,7 +259,12 @@ img,
     .selected-left,
     .selected-right {
         width: 100%;
-        height: auto;
+        /* height: auto; */
+        height: var(--H);
+    }
+
+    .selected-left {
+        display: none;
     }
 
     .selected-right {
@@ -306,6 +310,7 @@ img,
 
     .selected-right {
         padding: 160px 40px 40px 40px;
+        height: var(--H);
     }
 
     .brew-section {
@@ -323,6 +328,10 @@ img,
         flex-direction: column;
         padding: 40px 20px;
         gap: 20px;
+    }
+
+    .thumb{
+        display: none !important;
     }
 
     .info-block img,
@@ -352,6 +361,7 @@ img,
 
     .selected-right {
         padding: 160px 40px 40px 40px;
+        height: var(--H);
     }
 
     .thumb::after {
