知識區_RWD≤480px_畫面調整

--- a/src/assets/css/knowledge.css
+++ b/src/assets/css/knowledge.css
@@ -330,9 +330,9 @@ img,
         gap: 20px;
     }
 
-    .thumb{
+    /* .thumb{
         display: none !important;
-    }
+    } */
 
     .info-block img,
     .info-text {
