--- a/src/assets/css/address.css
+++ b/src/assets/css/address.css
@@ -22,6 +22,7 @@
     }
     
     .concepts {
+        margin-top: 150px;
         display: flex;
         flex-direction: column;
         align-items: center;
